--- a/INDEX HTML/index.html
+++ b/INDEX HTML/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta name="google-site-verification" content="KTPSzf5c928qyOC1jz8JRvRQ2svbsJ3rCn4D7G6CUaY" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
